--- a/sses_test/result.html
+++ b/sses_test/result.html
@@ -6,6 +6,7 @@
   <title>SSES Ergebnis</title>
   <script src="https://cdn.plot.ly/plotly-2.30.0.min.js"></script>
 </head>
+
 <body style="max-width:900px;margin:2rem auto;font-family:system-ui,Segoe UI,Arial;">
   <h2>Salzburg Stress Eating Scale (SSES)</h2>
 
@@ -13,59 +14,92 @@
   <div id="plot" style="height:420px;"></div>
 
 <script>
-function getHashParam(key){
-  const h = (location.hash || "").replace(/^#/, "");
-  return new URLSearchParams(h).get(key);
-}
+  function getHashParam(key){
+    const h = (location.hash || "").replace(/^#/, "");
+    return new URLSearchParams(h).get(key);
+  }
 
-const score = Number(getHashParam("score"));
-const txt = document.getElementById("txt");
+  const txt = document.getElementById("txt");
+  const score = Number(getHashParam("score"));
 
-if (!Number.isFinite(score)) {
-  txt.innerHTML = `<p><b>Kein Score gefunden.</b> Bitte den Fragebogen über den Link starten.</p>`;
-} else {
-  const mean = score / 10;
-  txt.innerHTML = `
-    <p><b>Total:</b> ${score} (Range 10–50)</p>
-    <p><b>Mittelwert pro Item:</b> ${mean.toFixed(2)} (1–5)</p>
-    <p><b>Hinweis:</b> Höhere Werte = tendenziell mehr essen unter Stress; niedrigere Werte = tendenziell weniger.</p>
-  `;
-}
+  // Show score text
+  if (!Number.isFinite(score)) {
+    txt.innerHTML = `<p><b>Kein Score gefunden.</b> Bitte den Fragebogen über den Link starten.</p>`;
+  } else {
+    const mean = score / 10;
+    txt.innerHTML = `
+      <p><b>Total:</b> ${score} (Range 10–50)</p>
+      <p><b>Mittelwert pro Item:</b> ${mean.toFixed(2)} (1–5)</p>
+      <p><b>Hinweis:</b> Höhere Werte = tendenziell mehr essen unter Stress; niedrigere Werte = tendenziell weniger.</p>
+    `;
+  }
 
-fetch("./norms/all.json")
-  .then(r => r.ok ? r.json() : null)
-  .then(norm => {
-    if (!norm || !norm.kde || !Number.isFinite(score)) return;
+  // Robust norm URL (works regardless of trailing path) + cache-bust
+  const baseUrl = window.location.href.split("#")[0];
+  const normUrl = new URL("./norms/all.json", baseUrl).toString() + "?v=" + Date.now();
 
-    const x = norm.kde.x, y = norm.kde.y;
+  // Load norms and plot (with explicit error reporting)
+  fetch(normUrl, { cache: "no-store" })
+    .then(async (r) => {
+      if (!r.ok) throw new Error(`HTTP ${r.status} for ${normUrl}`);
+      const j = await r.json();
 
-    const data = [{
-      x, y,
-      mode: "lines",
-      name: `Referenz (n=${norm.n ?? "?"})`
-    }];
+      // Validate expected structure: { n: <int>, kde: { x: [...], y: [...] } }
+      if (!j || !j.kde || !Array.isArray(j.kde.x) || !Array.isArray(j.kde.y)) {
+        const keys = j ? Object.keys(j) : [];
+        throw new Error(`Unexpected JSON shape. Need {kde:{x:[],y:[]}}. Got keys: ${keys.join(", ")}`);
+      }
+      if (j.kde.x.length !== j.kde.y.length) {
+        throw new Error(`JSON invalid: kde.x and kde.y lengths differ (${j.kde.x.length} vs ${j.kde.y.length}).`);
+      }
+      return j;
+    })
+    .then((norm) => {
+      const x = norm.kde.x;
+      const y = norm.kde.y;
 
-    const layout = {
-      margin: {t: 20, r: 20, b: 60, l: 60},
-      xaxis: {title: "SSES Total", range: [10, 50]},
-      yaxis: {title: "Dichte"},
-      shapes: [{
-        type: "line",
-        x0: score, x1: score,
-        y0: 0, y1: 1,
-        yref: "paper",
-        line: {width: 3}
-      }],
-      annotations: [{
-        x: score, y: 1, yref: "paper",
-        text: "Ihr Wert",
-        showarrow: false,
-        yanchor: "bottom"
-      }]
-    };
+      const data = [{
+        x,
+        y,
+        mode: "lines",
+        name: `Referenz (n=${norm.n ?? "?"})`
+      }];
 
-    Plotly.newPlot("plot", data, layout, {displayModeBar: false});
-  });
+      const layout = {
+        margin: { t: 20, r: 20, b: 60, l: 60 },
+        xaxis: { title: "SSES Total", range: [10, 50] },
+        yaxis: { title: "Dichte" },
+        shapes: Number.isFinite(score) ? [{
+          type: "line",
+          x0: score, x1: score,
+          y0: 0, y1: 1,
+          yref: "paper",
+          line: { width: 3 }
+        }] : [],
+        annotations: Number.isFinite(score) ? [{
+          x: score, y: 1, yref: "paper",
+          text: "Ihr Wert",
+          showarrow: false,
+          yanchor: "bottom"
+        }] : []
+      };
+
+      Plotly.newPlot("plot", data, layout, { displayModeBar: false });
+
+      txt.innerHTML += `<p style="opacity:.7">Normdaten geladen von: ${normUrl}</p>`;
+    })
+    .catch((err) => {
+      console.error(err);
+      txt.innerHTML += `
+        <p style="color:#b00">
+          <b>Normdaten konnten nicht geladen werden:</b> ${err.message}
+        </p>
+        <p style="opacity:.7">
+          Prüfe, ob diese URL im Browser JSON anzeigt:
+          <br><code>${normUrl}</code>
+        </p>
+      `;
+    });
 </script>
 </body>
 </html>
