--- a/sses_test/index.html
+++ b/sses_test/index.html
@@ -1,20 +1,21 @@
-<!-- index for SSES Test, enter correct LS link -->
 <!doctype html>
 <html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SSES</title>
+  <title>SSES Online</title>
 </head>
 <body style="max-width:900px;margin:2rem auto;font-family:system-ui,Segoe UI,Arial;">
   <h2>Salzburg Stress Eating Scale (SSES)</h2>
-  <p>Beantworten Sie 10 Fragen. Am Ende sehen Sie Ihren Score und einen Vergleich mit Referenzdaten.</p>
+
+  <p>10 Fragen. Am Ende sehen Sie Ihren Score und einen Vergleich mit Referenzdaten.</p>
+  <p style="opacity:.85">Hinweis: Kein Diagnoseinstrument. Nur zur Orientierung.</p>
 
   <p><a id="start" href="#">→ Zum Fragebogen</a></p>
 
 <script>
-  // Replace with your LimeSurvey link
-  document.getElementById("start").href = "https://YOUR-LIMESURVEY-URL-HERE";
+  // TODO: Replace with your LimeSurvey survey link
+  document.getElementById("start").href = "https://surveys6.emotion-salzburg.org/index.php/779612?newtest=Y&lang=de";
 </script>
 </body>
 </html>
