--- a/sses_test/index.html
+++ b/sses_test/index.html
@@ -5,18 +5,104 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SSES Online</title>
 </head>
-<body style="max-width:900px;margin:2rem auto;font-family:system-ui,Segoe UI,Arial;">
-  <h2>Salzburg Stress Eating Scale (SSES)</h2>
 
-  <p>10 Fragen. Am Ende sehen Sie Ihren Score und einen Vergleich mit Referenzdaten.</p>
-  <p style="opacity:.85">Hinweis: Kein Diagnoseinstrument. Nur zur Orientierung.</p>
+<body style="max-width:900px;margin:2rem auto;font-family:system-ui,Segoe UI,Arial;line-height:1.5;">
+  <h1 style="margin:0 0 .25rem 0;">Selbsttests zu Essverhalten</h1>
+  <p style="margin-top:0;opacity:.85">Arbeitsgruppe der Universität Salzburg</p>
 
-  <p><a id="start" href="#">→ Zum Fragebogen</a></p>
+  <section style="padding:1rem 1.25rem;border:1px solid rgba(0,0,0,.12);border-radius:14px;background:rgba(0,0,0,.02);">
+    <h2 style="margin-top:0;">Willkommen</h2>
+    <p>
+      Schön, dass du den Weg hierher gefunden hast! Auf dieser Seite findest du verschiedene Fragebögen, die wir in unserer
+      Arbeitsgruppe an der Universität Salzburg verwenden und die dir dabei helfen können, dein Essverhalten ein bisschen besser
+      einzuschätzen.
+    </p>
 
-<script>
-  // TODO: Replace with your LimeSurvey survey link
-  document.getElementById("start").href = "https://surveys6.emotion-salzburg.org/index.php/779612?newtest=Y&lang=de";
-</script>
+    <p style="margin-bottom:0;">
+      <b>Bitte beachte:</b> Ein Selbsttest kann <b>keine professionelle Einschätzung</b> durch psychologische/psychotherapeutische oder
+      medizinische Fachkräfte ersetzen. Er dient <b>lediglich als Orientierungshilfe</b> und unterstützt dich dabei, bewusster auf dein
+      Wohlbefinden zu achten.
+    </p>
+  </section>
+
+  <section style="margin-top:1.25rem;">
+    <h2>Mehr über unsere Forschung</h2>
+    <ul style="margin-top:.5rem;">
+      <li>
+        Wenn dich unsere Forschung interessiert, kannst du unsere Website hier besuchen:
+        <a href="https://ccns.plus.ac.at/labs/eat/" target="_blank" rel="noopener noreferrer">ccns.plus.ac.at/labs/eat</a>
+      </li>
+      <li>
+        Wenn du Interesse daran hast, selbst an unseren Studien teilzunehmen und Wissenschaft in Salzburg hautnah zu erleben,
+        findest du hier unsere aktuellen Studien:
+        <a href="https://ccns.plus.ac.at/labs/eat/" target="_blank" rel="noopener noreferrer">Aktuelle Studien</a>
+        <span style="opacity:.75">(Link ggf. anpassen)</span>
+      </li>
+    </ul>
+  </section>
+
+  <hr style="margin:1.5rem 0;opacity:.2" />
+
+  <section>
+    <h2>Salzburg Stress Eating Scale (SSES)</h2>
+    <p>
+      Die <b>Salzburg Stress Eating Scale (SSES)</b> ist ein Fragebogen, der misst, <b>wie sich Stress auf unser Essverhalten auswirkt</b>.
+      Er wurde 2018 entwickelt, um herauszufinden, ob Menschen bei Stress <b>mehr</b>, <b>unverändert</b> oder <b>weniger</b> essen als sonst.
+    </p>
+
+    <h3>Wie funktioniert das Instrument?</h3>
+    <p>
+      Der Fragebogen besteht aus <b>10 kurzen Aussagen</b>, die typische Stresssituationen beschreiben. Du bewertest dein Verhalten auf
+      einer Skala von <b>1 bis 5</b>:
+    </p>
+
+    <ul style="margin-top:.5rem;">
+      <li><b>1 bis 2:</b> Man isst bei Stress <b>weniger</b> als sonst.</li>
+      <li><b>3:</b> Das Essverhalten bleibt <b>unverändert</b>.</li>
+      <li><b>4 bis 5:</b> Man isst bei Stress <b>mehr</b> als sonst.</li>
+    </ul>
+
+    <p>
+      Der resultierende <b>Mittelwert</b> zeigt deine individuelle Tendenz:
+      <b>mehr</b> (&gt; 3), <b>weniger</b> (&lt; 3) oder <b>unverändert</b> (= 3) zu essen.
+    </p>
+
+    <h3>Was ist das Besondere?</h3>
+    <p>
+      Im Gegensatz zu älteren Tests berücksichtigt die SSES, dass Stress bei jedem Menschen <b>anders</b> auf die Nahrungsaufnahme wirken kann:
+      Während etwa ein Drittel der Menschen bei Stress <b>mehr</b> essen, isst ca. ein Drittel <b>weniger</b> und ein Drittel zeigt
+      <b>gar keine Veränderung</b>.
+    </p>
+    <p>
+      Der Test konzentriert sich dabei <b>rein auf die Reaktion auf Stress</b> und vermischt dies nicht mit anderen Emotionen wie Angst
+      oder Traurigkeit.
+    </p>
+
+    <p>
+      Die SSES ist <b>einfach anzuwenden</b>, <b>wissenschaftlich geprüft</b> und in <b>vielen Sprachen</b> verfügbar. Sie hilft Forschenden,
+      zu verstehen, wie Stress langfristig die Nahrungsaufnahme sowie die Gesundheit und das Gewicht beeinflussen kann.
+    </p>
+
+    <section style="margin-top:1.25rem;padding:1rem 1.25rem;border-left:4px solid rgba(0,0,0,.35);background:rgba(0,0,0,.03);border-radius:10px;">
+      <h3 style="margin-top:0;">Dein Interesse wurde geweckt?</h3>
+      <p style="margin:.25rem 0 .75rem 0;">
+        <b>Hier geht es zur SSES:</b>
+      </p>
+      <p style="margin:0;">
+        <a id="start" href="#" style="display:inline-block;padding:.7rem 1rem;border-radius:12px;border:1px solid rgba(0,0,0,.18);text-decoration:none;">
+          → Zum Fragebogen
+        </a>
+      </p>
+      <p style="margin:.75rem 0 0 0;opacity:.8;font-size:.95em;">
+        Hinweis: Der Fragebogen dauert nur wenige Minuten.
+      </p>
+    </section>
+  </section>
+
+  <script>
+    // LimeSurvey survey link
+    document.getElementById("start").href =
+      "https://surveys6.emotion-salzburg.org/index.php/779612?newtest=Y&lang=de";
+  </script>
 </body>
 </html>
-
